--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
     "token_secret": "2l3knfgqlkn2fvkl23nvklgnvkg23bhva08",
     "API_token_secret": "2lknvqk32nvqknv3qlkvn3kvln234lknvqS",
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
-    "mandrill": "JDkgsI2Q5La5kGVPXCOrFg",
+    "knowtify": "e8644357ff8f2da492532e7617a88114",
     "path": "/app",
     "api_base_url": "http://localhost:5000"
   },
@@ -41,7 +41,7 @@
     "token_secret": "2l3knfgqlkn2fvkl23nvklgnvkg23bhva08",
     "API_token_secret": "2lknvqk32nvqknv3qlkvn3kvln234lknvqS",
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
-    "mandrill": "JDkgsI2Q5La5kGVPXCOrFg",
+    "knowtify": "e8644357ff8f2da492532e7617a88114",
     "path": "/theme",
     "api_base_url": "http://localhost:5000"
   },
@@ -64,7 +64,7 @@
     "token_secret": "2l3knfgqlkn2fvkl23nvklgnvkg23bhva08",
     "API_token_secret": "2lknvqk32nvqknv3qlkvn3kvln234lknvqS",
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
-    "mandrill": "JDkgsI2Q5La5kGVPXCOrFg",
+    "knowtify": "e8644357ff8f2da492532e7617a88114",
     "path": "/app",
     "api_base_url": "https://dev.startupcommunity.org"
   },
@@ -87,7 +87,7 @@
     "token_secret": "2l3knfgqlkn2fvkl23nvklgnvkg23bhva08",
     "API_token_secret": "2lknvqk32nvqknv3qlkvn3kvln234lknvqS",
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
-    "mandrill": "JDkgsI2Q5La5kGVPXCOrFg",
+    "knowtify": "e8644357ff8f2da492532e7617a88114",
     "path": "/dist",
     "api_base_url": "https://startupcommunity.org"
   }
