--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "StartupCommunity.org",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "StartupCommunity.org - Kickstart your city's entrepreneurial ecosystem",
   "private": true,
   "dependencies": {
@@ -14,7 +14,7 @@
     "grunt": "^0.4.5",
     "http-proxy": "^1.9.0",
     "jwt-simple": "~0.2.0",
-    "mandrill-api": "~1.0.41",
+    "knowtify-node": "^0.1.0",
     "method-override": "~2.1.3",
     "moment": "~2.8.3",
     "morgan": "~1.2.3",
