--- a/config.json
+++ b/config.json
@@ -22,6 +22,29 @@
     "path": "/app",
     "api_base_url": "http://localhost:5000"
   },
+   "test": {
+     "db": {
+       "key": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
+       "collections": {
+         "users": "communities-dev",
+         "communities": "communities-dev"
+       }
+     },
+     "linkedin": {
+       "clientID": "75bqixdv58z1az",
+       "clientSecret": "C5zHpSLjV4uNFUM1"
+     },
+     "angellist": {
+       "clientID": "7d93aaf3f93e48b83e9cfa147004d6a4",
+       "clientToken": "40a39cbffa91eecf57031c0ffcd0bc81"
+     },
+     "token_secret": "2l3knfgqlkn2fvkl23nvklgnvkg23bhva08",
+     "API_token_secret": "2lknvqk32nvqknv3qlkvn3kvln234lknvqS",
+     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
+     "knowtify": "e8644357ff8f2da492532e7617a88114",
+     "path": "/dist",
+     "api_base_url": "http://localhost:5000"
+   },
   "theme": {
     "db": {
       "key": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
