--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "local": {
     "db": {
       "key": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
-      "communities": "communities"
+      "communities": "communities-dev"
     },
     "linkedin": {
       "clientID": "75bqixdv58z1az",
@@ -18,6 +18,46 @@
     "knowtify": "e8644357ff8f2da492532e7617a88114",
     "path": "/app",
     "api_base_url": "http://localhost:5000"
+  },
+  "theme": {
+    "db": {
+      "key": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
+      "communities": "communities-dev"
+    },
+    "linkedin": {
+      "clientID": "75bqixdv58z1az",
+      "clientSecret": "C5zHpSLjV4uNFUM1"
+    },
+    "angellist": {
+      "clientID": "7d93aaf3f93e48b83e9cfa147004d6a4",
+      "clientToken": "40a39cbffa91eecf57031c0ffcd0bc81"
+    },
+    "token_secret": "2l3knfgqlkn2fvkl23nvklgnvkg23bhva08",
+    "API_token_secret": "2lknvqk32nvqknv3qlkvn3kvln234lknvqS",
+    "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
+    "knowtify": "e8644357ff8f2da492532e7617a88114",
+    "path": "/theme",
+    "api_base_url": "http://localhost:5000"
+  },
+  "development": {
+    "db": {
+      "key": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
+      "communities": "communities-dev"
+    },
+    "linkedin": {
+      "clientID": "75bqixdv58z1az",
+      "clientSecret": "C5zHpSLjV4uNFUM1"
+    },
+    "angellist": {
+      "clientID": "7d93aaf3f93e48b83e9cfa147004d6a4",
+      "clientToken": "40a39cbffa91eecf57031c0ffcd0bc81"
+    },
+    "token_secret": "2l3knfgqlkn2fvkl23nvklgnvkg23bhva08",
+    "API_token_secret": "2lknvqk32nvqknv3qlkvn3kvln234lknvqS",
+    "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
+    "knowtify": "e8644357ff8f2da492532e7617a88114",
+    "path": "/dist",
+    "api_base_url": "https://dev.startupcommunity.org"
   },
    "test": {
      "db": {
@@ -39,46 +79,6 @@
      "path": "/dist",
      "api_base_url": "http://localhost:5000"
    },
-  "theme": {
-    "db": {
-      "key": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
-      "communities": "communities"
-    },
-    "linkedin": {
-      "clientID": "75bqixdv58z1az",
-      "clientSecret": "C5zHpSLjV4uNFUM1"
-    },
-    "angellist": {
-      "clientID": "7d93aaf3f93e48b83e9cfa147004d6a4",
-      "clientToken": "40a39cbffa91eecf57031c0ffcd0bc81"
-    },
-    "token_secret": "2l3knfgqlkn2fvkl23nvklgnvkg23bhva08",
-    "API_token_secret": "2lknvqk32nvqknv3qlkvn3kvln234lknvqS",
-    "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
-    "knowtify": "e8644357ff8f2da492532e7617a88114",
-    "path": "/theme",
-    "api_base_url": "http://localhost:5000"
-  },
-  "development": {
-    "db": {
-      "key": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
-      "communities": "communities"
-    },
-    "linkedin": {
-      "clientID": "75bqixdv58z1az",
-      "clientSecret": "C5zHpSLjV4uNFUM1"
-    },
-    "angellist": {
-      "clientID": "7d93aaf3f93e48b83e9cfa147004d6a4",
-      "clientToken": "40a39cbffa91eecf57031c0ffcd0bc81"
-    },
-    "token_secret": "2l3knfgqlkn2fvkl23nvklgnvkg23bhva08",
-    "API_token_secret": "2lknvqk32nvqknv3qlkvn3kvln234lknvqS",
-    "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
-    "knowtify": "e8644357ff8f2da492532e7617a88114",
-    "path": "/dist",
-    "api_base_url": "https://dev.startupcommunity.org"
-  },
   "production": {
     "db": {
       "key": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
