--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,7 @@
     "angulartics-google-analytics": "~0.1.0",
     "animate.css": "https://github.com/daneden/animate.css.git#~3.2.0",
     "awesome-bootstrap-checkbox": "~0.3.5",
+    "angular-xeditable": "~0.1.8",
     "bootstrap": "~3.3.0",
     "es5-shim": "~4.0.3",
     "fontawesome": "~4.3.0",
@@ -43,7 +44,7 @@
     "stacktrace-js": "~0.6.4",
     "sweetalert": "https://github.com/t4t5/sweetalert.git#~1.0.1",
     "underscore": "~1.5.2",
-    "angular-file-upload": "~2.1.4"
+    "angular-aws-s3-upload": "~1.0.2-beta"
   },
   "resolutions": {
     "angular": "1.4.6",
